# SimPLCity

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: arm-none-eabi.cmake  platform_linux.cmake  platform_stm32.cmake  verify_cubemx.cmake
platform/hal/: CMakeLists.txt  hal.cpp  hal.hpp  panic.h
platform/hal/board/: CMakeLists.txt  board.hpp
platform/hal/board/nucleo_h753zi/: board.cpp
platform/hal/devices/: CMakeLists.txt
platform/hal/devices/impl/: Button.cpp  Button.hpp  Led.cpp  Led.hpp
platform/hal/devices/itf/: IButton.hpp  ILed.hpp
platform/hal/drivers/: CMakeLists.txt  common.hpp
platform/hal/drivers/factory/: CMakeLists.txt  ethernet.hpp  gpio.hpp  rng.hpp  rtc.hpp  timer.hpp
platform/hal/drivers/factory/linux/: ethernet.cpp  gpio.cpp  rng.cpp  rtc.cpp  timer.cpp
platform/hal/drivers/factory/stm32/: ethernet.cpp  gpio.cpp  rng.cpp  rtc.cpp  timer.cpp
platform/hal/drivers/impl/: CMakeLists.txt
platform/hal/drivers/impl/linux/: Ethernet.cpp  Ethernet.hpp  Gpio.cpp  Gpio.hpp  Rng.cpp  Rng.hpp  Rtc.cpp  Rtc.hpp  Timer.cpp  Timer.hpp
platform/hal/drivers/impl/stm32/: Ethernet.cpp  Ethernet.hpp  Gpio.cpp  Gpio.hpp  Rng.cpp  Rng.hpp  Rtc.cpp  Rtc.hpp  Timer.cpp  Timer.hpp  ethernet_dma.h
platform/hal/drivers/itf/: IDigitalInput.hpp  IDigitalOutput.hpp  IEthernet.hpp  IGpio.hpp  IRng.hpp  IRtc.hpp  ITimer.hpp
platform/hal/linux/: hal.cpp  hal.hpp
platform/hal/stm32/: InterruptGuard.hpp  hal.cpp  hal.hpp
platform/hal/tests/: CMakeLists.txt  clock_test.cpp  ethernet_test.cpp  gpio_test.cpp  rng_test.cpp
platform/hal/utilities/: Result.hpp
platform/runtime/: CMakeLists.txt  README.md  fx_user.h  lx_user.h  startup.cpp  thread.hpp  tx_user.h
platform/runtime/libc/: CMakeLists.txt  filesystem.cpp  filesystem.hpp  libc.c  storage_media.cpp  storage_media.hpp  storage_media_policy.hpp
platform/runtime/libc/include/: dirent.h
platform/runtime/libc/include/sys/: dirent.h  statvfs.h
platform/runtime/libstdcxx/: CMakeLists.txt  atomic.cpp  backend.cpp  backend.hpp  clock.cpp  condition_variable.cpp  cxx_guard.cpp  future.cpp  once.cpp  random.cpp  sleep.cpp  terminate.cpp  thread.cpp  thread_exit.cpp  tls.cpp
platform/runtime/libstdcxx/include/bits/: c++config.h  gthr-default.h  semaphore_base.h
platform/runtime/tests/: CMakeLists.txt  hardware_self_test.cpp  libc_filex_test.cpp  libc_test.cpp  libstdcxx_test.cpp  panic_override_probe.cpp  static_terminate_probe.cpp  storage_media_test.cpp  terminate_probe.cpp  verify_panic_override.cmake  verify_terminate.cmake
scripts/: run_hardware_self_test.sh
src/: CMakeLists.txt  main.cpp
